tests/paczka1/fuzzy1/14836539.err
Error in line 2: oirhwZe3 A325 39,0
Error in line 7: HHOIa9nJ A703 12,6
Error in line 10: HHOIa9nJ A325 29,3
Error in line 12: n9IiqH S104 44,4
Error in line 20: oC2huV5H1 S104 58,8
Error in line 14: oirhwZe3 A703 241,0
Error in line 29: oirhwZe3 S820 78,8
Error in line 27: HHOIa9nJ A703 20,4
